// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Log entries API client will list most recent dive sites 1`] = `
[
  {
    "averageDifficulty": 1.3,
    "averageRating": 4.4,
    "createdOn": 1678720808407,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1189.jpg",
      "location": "Cheyenne, VT, NR",
      "logBookSharing": "private",
      "memberSince": 1550661767372,
      "name": "Ford Kris",
      "userId": "179bebf1-cc41-48cf-88aa-0f886c01e74f",
      "username": "Ford_Kris",
    },
    "directions": "Civitas trans nobis conventus compello aro. Carcer villa vulariter apparatus benevolentia. Tergeo tabula terminatio tres magni atavus adicio certus.",
    "freeToDive": false,
    "id": "af6294af-89e4-49ea-80af-967de0f336cd",
    "location": "Maximilliaborough, WA, PS",
    "name": "agreeable, private eardrum",
    "shoreAccess": true,
  },
  {
    "averageDifficulty": 4.9,
    "averageRating": 2,
    "createdOn": 1589163161228,
    "creator": {
      "accountTier": 0,
      "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/1158.jpg",
      "location": "Henderson, NE, CG",
      "logBookSharing": "private",
      "memberSince": 1421637069831,
      "name": "Kaelyn Muller",
      "userId": "bc1d6cad-6189-4f44-a9f1-0f095b6cd0ff",
      "username": "Kaelyn.Muller80",
    },
    "depth": {
      "depth": 104.7,
      "unit": "ft",
    },
    "directions": "Cometes tempora officiis commodi taceo somnus audeo odit ars cupiditate. Teres attonbitus amplitudo autus titulus ventus. Vicissitudo suggero tamquam tunc sopor adficio capitulus.",
    "freeToDive": false,
    "gps": {
      "lat": -61.5161,
      "lon": 111.4163,
    },
    "id": "2358f771-1bda-4792-895a-15ab916ab569",
    "location": "Fort Morton, NH, KG",
    "name": "authentic, key crate",
    "shoreAccess": false,
  },
]
`;

exports[`Log entries API client will list most recent operators 1`] = `
[
  {
    "active": true,
    "address": "329 Welland Ave, St. Catharines, ON L2R 2R2, Canada",
    "createdAt": 1739204161841,
    "description": "Dan’s was purchased by Matt Mandziuk who has had a big set of shoes to fill as Dan backs out slowly into retirement. We have enjoyed the new concepts Matt continues to bring to the store, as well as fresh and fun ideas. There are always many new and exciting changes with Matt at the helm. While most things have remained the same, the main goals have been to get things running more efficiently and to make the sport more accessible to everyone involved. One of the most successful changes within the brand was offering in-store financing, renovating the layout of the store, as well as the addition of a number of great new dive trips and charters. Our goal as a shop is to keep expanding, growing and improving at every turn.
Matt’s vision for the Dan’s brand has also expanded into the creation of Divers Edge – our technical dive training arm. With a solid and proven foundation of recreational diving, the Divers Edge brand aims to further technical diving and exploration with some exciting new projects and trips specific to technical divers.

2024 is going to be our 50th anniversary of Dan’s Dive Shop. To hit the Forty year mark in any business is a huge achievement – let alone the dive business – is no easy task. We couldn’t have done it without you – our customers and students. It’s been a great ride full of learning, improvement, more learning and lots of bubbles!

Thank you for your continued support of the DDS brand and we look forward to adding more to our history!

See you in the water,
The DDS family.",
    "email": "admin@dansdiveshop.ca",
    "gps": {
      "lat": 43.1708282,
      "lon": -79.2268426,
    },
    "id": "0194f0a5-7131-7bb9-95d2-a7f833eff151",
    "logo": "/api/operators/dans-dive-shop/logo",
    "name": "Dan's Dive Shop",
    "owner": {
      "accountTier": 200,
      "avatar": "/api/users/Chris/avatar",
      "location": "Cambridge, ON",
      "logBookSharing": "private",
      "memberSince": 1713361114242,
      "name": "Chris Carleton",
      "userId": "cb12fb5b-f1b3-499f-a6ae-dfb467d3d2d1",
      "username": "Chris",
    },
    "phone": "(800) 268-3267",
    "slug": "dans-dive-shop",
    "socials": {
      "facebook": "dansdiveshop",
      "instagram": "dansdiveshop",
      "tiktok": "dansdiveshop",
      "twitter": "dansdiveshop",
      "youtube": "dansdiveshop",
    },
    "updatedAt": 1739206823938,
    "verificationStatus": "unverified",
    "website": "https://dansdiveshop.ca/",
  },
]
`;

exports[`Log entries API client will retrieve dive site review 1`] = `
{
  "comments": "I love diving here. Warm water and good vis.",
  "createdOn": 1739559310897,
  "creator": {
    "accountTier": 200,
    "avatar": "/api/users/Chris/avatar",
    "location": "Cambridge, ON",
    "logBookSharing": "private",
    "memberSince": 1713361114242,
    "name": "Chris Carleton",
    "userId": "cb12fb5b-f1b3-499f-a6ae-dfb467d3d2d1",
    "username": "Chris",
  },
  "difficulty": 0.9,
  "id": "019505d0-9631-799c-951f-04f0bb2f2c13",
  "rating": 4.7,
  "updatedOn": 1739559310897,
}
`;

exports[`Log entries API client will retrieve log entry data samples 1`] = `
[
  {
    "depth": 50,
    "gps": {
      "lat": 43.1708282,
      "lng": -79.2268426,
    },
    "offset": 1000,
  },
  {
    "depth": 56,
    "gps": {
      "lat": 43.1708282,
      "lng": -79.2268426,
    },
    "offset": 2000,
  },
]
`;

exports[`Log entries API client will retrieve operator review 1`] = `
{
  "comments": "Sick dive shop, great staff!",
  "createdAt": 1739560608679,
  "creator": {
    "accountTier": 200,
    "avatar": "/api/users/Chris/avatar",
    "location": "Cambridge, ON",
    "logBookSharing": "private",
    "memberSince": 1713361114242,
    "name": "Chris Carleton",
    "userId": "cb12fb5b-f1b3-499f-a6ae-dfb467d3d2d1",
    "username": "Chris",
  },
  "id": "019505e4-63a7-7888-91a3-854ea65487a2",
  "rating": 4.1,
  "updatedAt": 1739560608679,
}
`;

exports[`Log entries API client will review dive site 1`] = `
{
  "comments": "Updated review!",
  "createdOn": 1739559310897,
  "creator": {
    "accountTier": 200,
    "avatar": "/api/users/Chris/avatar",
    "location": "Cambridge, ON",
    "logBookSharing": "private",
    "memberSince": 1713361114242,
    "name": "Chris Carleton",
    "userId": "cb12fb5b-f1b3-499f-a6ae-dfb467d3d2d1",
    "username": "Chris",
  },
  "difficulty": 2.2,
  "id": "019505d0-9631-799c-951f-04f0bb2f2c13",
  "rating": 3.8,
  "updatedOn": 1739559310897,
}
`;

exports[`Log entries API client will review operator 1`] = `
{
  "comments": "Sick dive shop, great staff!",
  "createdAt": 1739560608679,
  "creator": {
    "accountTier": 200,
    "avatar": "/api/users/Chris/avatar",
    "location": "Cambridge, ON",
    "logBookSharing": "private",
    "memberSince": 1713361114242,
    "name": "Chris Carleton",
    "userId": "cb12fb5b-f1b3-499f-a6ae-dfb467d3d2d1",
    "username": "Chris",
  },
  "id": "019505e4-63a7-7888-91a3-854ea65487a2",
  "rating": 4.1,
  "updatedAt": 1739560608679,
}
`;
